[package]
name = "hyprcursor-rs"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/hyprcursor-rs"
license = "MPL-2.0"

[dependencies]
png = "0.17.14"
resvg = { version = "0.44.0", default-features = false }
thiserror = "1.0.64"
zip = { version = "2.2.0", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "zstd"] }

[features]
default = []
text = ["resvg/text", "resvg/system-fonts", "resvg/memmap-fonts"]
